# mille

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  devbox.json  flake.nix  go.work  lefthook.yml  mille.toml  rust-toolchain.toml  spec.md
.cargo/: config.toml
.claude/: settings.json
.claude/rules/: new-language.md  no-tmp.md  pr-workflow.md  testing.md
.github/: dependabot.yml
.github/workflows/: cd-reserve.yml  cd.yml  ci.yml  docs.yml  release.yml  security-audit.yml  vulnerability-check.yml
docs/: TODO.md  e2e_checklist.md  github-actions-usage.md
docs/administrator/: cd_setup.md  docs-site.md  pypi_setup.md  wasm_build.md
scripts/: build-wasm.sh
src/: lib.rs  main.rs  runner.rs
src/infrastructure/: mod.rs  resolve_config_generator.rs
src/usecase/: add_layer.rs  analyze.rs  check_architecture.rs  init.rs  mod.rs  report_external.rs
tasks/: todo.md
tasks/20260304-pr8-go-support/: timeline.md
tasks/20260304-wasm/: TODO.md  timeline.md
tasks/20260305-external-allow-e2e/: TODO.md
tasks/20260305-python-support/: TODO.md  timeline.md
tasks/20260305-wazero-cache/: TODO.md  timeline.md
tasks/20260306-fix-release-workflow/: TODO.md
tasks/20260306-ts-js-support/: TODO.md  timeline.md
tasks/20260307-fix-version-display/: TODO.md  timeline.md
tasks/20260307-pr10-format-option/: TODO.md  timeline.md
tasks/20260307-pr11-mille-init/: TODO.md  timeline.md
tasks/20260307-pr12-ignore-section/: TODO.md  timeline.md
tasks/20260308-analyze/: TODO.md  timeline.md
tasks/20260308-fix-init-external-mode/: TODO.md  timeline.md
tasks/20260308-report-external/: TODO.md  timeline.md
tasks/20260308-severity/: TODO.md  timeline.md
tasks/20260309-fix-mille-init/: TODO.md  timeline.md
tasks/20260314-java-support/: TODO.md  timeline.md
tasks/20260315-fix-init-namespace-package-names/: TODO.md  timeline.md
tasks/20260315-fix-init-scan-namespace-imports/: TODO.md  timeline.md
tasks/20260315-kotlin-support/: TODO.md  timeline.md
tasks/20260315-security-audit/: TODO.md  timeline.md
tasks/20260319-docs-website/: TODO.md
tasks/20260322-naming-convention/: TODO.md  timeline.md
tasks/20260322-php-support/: 002-implementation-plan.md  TODO.md  timeline.md
tasks/20260322-remove-lang-types/: TODO.md  timeline.md
tasks/20260323-c-language-support/: TODO.md  timeline.md
tasks/20260323-parsed-names-guard/: TODO.md  timeline.md
tasks/20260323-string-literal-name-deny/: TODO.md  timeline.md
tasks/20260324-fix-pypi-version/: TODO.md  timeline.md
tasks/20260324-name-deny-identifier/: TODO.md  timeline.md
tasks/20260324-target-path-argument/: TODO.md  timeline.md
tasks/20260324-yaml-support/: TODO.md  timeline.md
tasks/20260325-allow-call-patterns-multifile-main/: TODO.md  timeline.md
tasks/20260325-fix-mille-own-toml/: TODO.md  timeline.md
tasks/20260326-mille-add/: TODO.md  timeline.md
tasks/20260326-mille-add-depth/: TODO.md  timeline.md
tasks/20260326-multilang-resolver/: TODO.md  timeline.md
tasks/20260406-vuln-check/: TODO.md  (+2 more)
tests/: e2e_add.rs  e2e_analyze.rs  e2e_c.rs  e2e_check.rs  e2e_elixir.rs  e2e_format.rs  e2e_go.rs  e2e_ignore.rs  e2e_init.rs  e2e_java.rs  e2e_javascript.rs  e2e_kotlin.rs  e2e_multifile_main.rs  e2e_multilang_mixed.rs  e2e_multilang_split.rs  e2e_naming.rs  e2e_php.rs  e2e_python.rs  e2e_report_external.rs  e2e_severity.rs  e2e_typescript.rs  e2e_typescript_atmark.rs  e2e_yaml.rs
website/: .prototools  astro.config.mjs  package.json
(+205 files in other folders)
