[package]
name = "mille"
version = "0.0.1"
edition = "2021"
description = "Architecture Checker — Rust-based multi-language architecture linter"
license = "MIT"
repository = "https://github.com/makinzm/mille"
readme = "README.md"
categories = ["development-tools"]
keywords = ["architecture", "linter"]

[package.metadata.deb]
maintainer = "makinzm <makinzm@users.noreply.github.com>"
copyright = "2024 makinzm"
license-file = ["LICENSE", "4"]
# $auto は cross コンパイル時に x86_64 ホストで arm64 ライブラリを解決できず
# dpkg-shlibdeps が失敗する。glibc 依存を明示して $auto を回避する。
depends = "libc6 (>= 2.17)"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mille", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mille/README", "644"],
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
