[package]
name = "mille"
version = "0.0.1"
edition = "2021"
description = "Architecture Checker — Rust-based multi-language architecture linter"
license = "MIT"
repository = "https://github.com/makinzm/mille"
readme = "README.md"
categories = ["development-tools"]
keywords = ["architecture", "linter"]

[package.metadata.deb]
maintainer = "makinzm <makinzm@users.noreply.github.com>"
copyright = "2024 makinzm"
license-file = ["LICENSE", "4"]
# NOTE: "$auto" にすると、.deb を作るときに dpkg-shlibdeps というツールが
#       「このバイナリが依存している共有ライブラリ(.so)は何か」を自動検出しようとする。
#       しかし GitHub Actions の x86_64 ランナーで arm64 向けにクロスコンパイルした場合、
#       arm64 用の .so ファイルがランナーに存在しないため検出に失敗する。
#       結果として .deb に依存情報が入らず、インストール先で libc6 が見つからないトラブルが起きうる。
#       そのため、このバイナリが実際に必要とする libc6 を直接指定している。
#       参考: https://github.com/makinzm/mille/actions/runs/22662654715/job/65686494078
depends = "libc6 (>= 2.17)"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mille", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mille/README", "644"],
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
