[package]
name = "mille"
version = "0.0.14"
edition = "2021"
description = "Architecture Checker — Rust-based multi-language architecture linter"
license = "MIT"
repository = "https://github.com/makinzm/mille"
readme = "README.md"
categories = ["development-tools"]
keywords = ["architecture", "linter"]

[package.metadata.deb]
maintainer = "makinzm <makinzm@users.noreply.github.com>"
copyright = "2024 makinzm"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mille", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mille/README", "644"],
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-java = "0.21"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tree-sitter-kotlin = "0.3"
tree-sitter-php = "0.22"
tree-sitter-c = "0.21"
tree-sitter-yaml = "0.6"
tree-sitter-elixir = "0.2.0"

[dev-dependencies]
tempfile = "3"
